--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -33,6 +33,8 @@ video {
 
 .container .subtitle span {
   color: #ef5e8d;
+  font-family: "Clicker Script";
+  font-size: 100px;
 }
 
 .navbar {
@@ -64,10 +66,16 @@ video {
   font-weight: bold;
 }
 
+.navbar ul li a i {
+  margin-right: 5px;
+}
+
 .navbar ul li a:hover {
   color: #ef5e8d;
 }
+/* end homepage */
 
+/* members */
 .members {
   width: 100%;
   height: 120vh;
@@ -81,6 +89,8 @@ video {
   text-align: center;
   font-size: 50px;
   font-weight: bold;
+  color: #ef5e8d;
+  font-family: "Clicker Script";
 }
 
 .container .member {
@@ -102,6 +112,11 @@ video {
   transition: all 0.3s ease;
 }
 
+.container .member .profile a {
+  text-decoration: none;
+  color: black;
+}
+
 .container .member .profile .imgwrap img {
   width: 100%;
 }
@@ -121,7 +136,9 @@ video {
   transform: scale(1.2);
   background-color: #ef5e8d;
   color: white;
+  cursor: pointer;
 }
+/* end members */
 
 .footer {
   width: 100%;
@@ -147,6 +164,74 @@ video {
   width: 300px;
 }
 
+.footer .container .logo .logo-title span {
+  font-family: "Clicker Script";
+  font-size: 30px;
+}
+
 .footer .container .maps {
   margin-right: 50px;
 }
+/* end footer */
+
+/* pop up */
+.popup {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 100;
+  transition: all 0.3s;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.popup:target {
+  opacity: 1;
+  visibility: visible;
+}
+
+.popup__content {
+  background-color: #fefefe;
+  border-radius: 10px;
+  padding: 30px;
+  position: relative;
+  font-size: 30px;
+  width: 85%;
+  margin: auto;
+  margin-top: 10%;
+}
+
+.popup__close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  text-decoration: none;
+  color: inherit;
+  font-size: 50px;
+}
+
+.popup__content .container {
+  display: flex;
+  align-items: center;
+}
+
+.popup__content .container .img img {
+  width: 300px;
+}
+
+.popup__content .container .des {
+  margin-left: 30px;
+  color: #ef5e8d;
+}
+
+.popup__content .container .des h1 {
+  font-family: "Clicker Script";
+}
+
+.popup__content .container .des p {
+  font-weight: 100;
+}
+/* end pop up */
