--- a/asset/css/games.css
+++ b/asset/css/games.css
@@ -61,11 +61,103 @@
 .navbar ul li a:hover {
   color: #ef5e8d;
 }
+
+.btn-main {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.btn-gambar,
+.btn-suit {
+  top: 0;
+  margin-top: 25%;
+}
+
+.btn {
+  font-family: "Arial", sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  margin: 10px;
+  padding: 12px 24px;
+  cursor: pointer;
+  border-radius: 10px;
+  border: none;
+  transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+  background-color: #ef5e8d;
+
+  color: white;
+}
+
+.arrow {
+  opacity: 0;
+  transform: translateX(-50%);
+  transition: transform 0.3s ease-in-out;
+}
+
+.btn:hover .arrow {
+  opacity: 1;
+  transform: translateX(50%);
+}
+
 /* end navbar */
 
 /* main */
 .main {
   width: 100%;
-  height: 100vh;
+  height: 70vh;
 }
+
+.main .container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.main .container .img {
+  margin-top: 50px;
+}
+
+.main .container .img img {
+  width: 300px;
+  border-radius: 10px;
+}
+
+.main .container .jawaban button {
+  width: 100px;
+  height: 40px;
+  padding: 5px;
+  border-radius: 10px;
+  border: none;
+}
+
+.main .container .jawaban input {
+  margin-right: 20px;
+  margin-bottom: 20px;
+  height: 40px;
+  width: 500px;
+  border: none;
+  border-bottom: 2px solid #ccc;
+  outline: none;
+  transition: border-bottom-color 0.3s;
+}
+
+.main .container .jawaban input:focus {
+  border-bottom-color: #ef5e8d;
+}
+
+.main .container .jawaban p {
+  margin-top: 10px;
+}
+
+.main .container .jawaban button:hover {
+  background-color: #ef5e8d;
+  color: white;
+  cursor: pointer;
+}
+
 /* end main */
